tolk-tester/tests/invalid-semantics/err-4127.tolk
const ttt = 1;
const asdf = ttt<int>;

/**
@compilation_should_fail
@stderr generic T not expected here
 */
